force-app/main/default/objects/Digital_Engagement__c/Digital_Engagement__c.object-meta.xml
<CustomObject>
    <label>Digital Engagement</label>
    <nameField>
        <label>Digital Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>