force-app/main/default/objects/Digital_Engagement__c/fields/Digital_Name__c.field-meta.xml
<CustomField>
    <fullName>Digital_Name__c</fullName>
    <label>Digital Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>