force-app/main/default/objects/Digital_Engagement__c/fields/Participation__c.field-meta.xml
<CustomField>
    <fullName>Participation__c</fullName>
    <label>Participation</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company Profile</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Live webinar</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Livestream</fullName>
            </value>
            <value>
                <fullName>On-demand webinar</fullName>
            </value>
            <value>
                <fullName>YouTube Playlist</fullName>
            </value>
            <value>
                <fullName>CNCF Technology Radar</fullName>
            </value>
            <value>
                <fullName>Media Panel</fullName>
            </value>
            <value>
                <fullName>Journey Report</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <isActive>false</isActive>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>