force-app/main/default/objects/Digital_Engagement__c/fields/Participation_Description__c.field-meta.xml
<CustomField>
    <fullName>Participation_Description__c</fullName>
    <label>Participation Description</label>
    <type>TextArea</type>
</CustomField>