force-app/main/default/objects/Digital_Engagement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Digital Engagements</relationshipLabel>
    <relationshipName>Digital_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>