force-app/main/default/objects/Digital_Engagement__c/fields/Registrants__c.field-meta.xml
<CustomField>
    <fullName>Registrants__c</fullName>
    <label>Registrants</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>