force-app/main/default/objects/Digital_Engagement__c/validationRules/Attendees_and_Registrants_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Attendees_and_Registrants_required</fullName>
    <active>true</active>
    <description>Attendees and Registrants, both are mandatory for Webinar Participation.</description>
    <errorConditionFormula>AND( TEXT(Participation__c) == &apos;Webinar&apos;,
OR(
(TEXT(Attendees__c) == &apos;&apos;),
(TEXT(Registrants__c) == &apos;&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please enter Attendees and Registrants, both are mandatory for Webinar Participation.</errorMessage>
</ValidationRule>