force-app/main/default/objects/Digital_Engagement__c/listViews/Hyperledger_Digital_Engagements.listView-meta.xml
<ListView>
    <fullName>Hyperledger_Digital_Engagements</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Hyperledger</value>
    </filters>
    <label>Hyperledger Digital Engagements</label>
</ListView>